# Smart-Contract-Audit-Agent

./: .env.example  .gitignore  README.md  pyproject.toml
knowledge/: smart_contract_vulnerabilities.md  solidity_style_guide.md  user_preference.txt
src/smart_contract_audit_agent/: crew.py  main.py
src/smart_contract_audit_agent/config/: agents.yaml  tasks.yaml
src/smart_contract_audit_agent/tools/: audit_tools.py  custom_tool.py
