[project]
name = "smart_contract_audit_agent"
version = "0.1.0"
description = "Smart-Contract-Audit-Agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.159.0,<1.0.0",
    "requests>=2.31.0"
]

[project.scripts]
smart_contract_audit_agent = "smart_contract_audit_agent.main:run"
run_crew = "smart_contract_audit_agent.main:run"
train = "smart_contract_audit_agent.main:train"
replay = "smart_contract_audit_agent.main:replay"
test = "smart_contract_audit_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
